2006-08-03  Jan Hubicka  <jh@suse.cz>

	* domwalk.c (walk_dominator_tree): Reorganize to non-recursive
	implementation.

2006-08-03  Dorit Nuzman  <dorit@il.ibm.com>

        PR tree-optimization/27770
        * tree-vectorizer.h (get_vectype_for_scalar_type): Function
        declaration removed (moved to tree-flow.h).
        (vect_can_force_dr_alignment_p): Likewise.
        * tree-flow.h (get_vectype_for_scalar_type): New function declaration
        (moved from tree-vectorizer.h).
        (vect_can_force_dr_alignment_p): Likewise.
        * tree-vectorizer.c (vect_print_dump_info): Allow calling this function
        from outside the vectorizer - in particular from cgraph stage.
        * tree-vect-analyze.c (vect_compute_data_ref_alignment): Don't increase
        the alignment of global arrays when -fsection-anchors is enabled.
        * cgraphunit.c (cgraph_increase_alignment): New function.
        (cgraph_optimize): Call cgraph_increase_alignment.

2006-08-03  David Edelsohn  <edelsohn@gnu.org>

	PR target/27566
	* config/rs6000/rs6000.c (rs6000_legitimize_reload_address): Do
	not reload a SPE symbol_ref into a lo_sum address.

2006-08-02  Daniel Jacobowitz  <dan@codesourcery.com>

	PR debug/28063
	* dwarf2out.c (prune_unused_types_prune): Move call to
	prune_unused_types_update_strings to cover the parent DIE also.

2006-08-02  Jan Hubicka  <jh@suse.cz>

	PR gcov/profile/28480
	* tree-cfg.c (change_bb_for_stmt): New function.
	(tree_merge_blocks, tree_split_blocks): Use it.

2006-08-01  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c++/28250
	PR c++/28257
	PR c++/28259
	PR c++/28267
	* toplev.c (compile_file): Return early on errorcount or sorrycount.
	* cgraphunit.c (cgraph_finalize_compilation_unit): Likewise.
	(cgraph_optimize): Likewise.

2006-08-01  Stuart Hastings  <stuart@apple.com>

	* rtl.h (UINTVAL) New.
	* config/rs6000/rs6000.c (SMALL_INT) Use it.
	* testsuite/gcc.dg/20060801-1.c: New.
	